# MABE

./: .gitignore  .setup  .travis.buildOptions.txt  .travis.modules.txt  .travis.yml  CMakeLists.txt  DAG_settings.cfg  Global.cpp  Global.h  LICENSE  LICENSE.txt  LOD_data.csv  LOD_organisms.csv  MapWorldData.csv  README.md  appveyor.yml  buildOptions.txt  exp_test.py  exp_test.txt  mabe  main.cpp  makefile  max.csv  modules.h  modules.txt  pop.csv  population_loader.cfg  population_loader.plf  settings.cfg  settings_DAG.cfg  settings_organism.cfg  settings_world.cfg  setup  setup.bat  setup.cmd  test.out
Analyze/: Analyze.cpp  Analyze.h  Analyzer.cpp  Analyzer.h  CMakeLists.txt  MutationAnalyze.cpp  MutationAnalyze.h  neurocorrelates.cpp  neurocorrelates.py
Archivist/: DefaultArchivist.cpp  DefaultArchivist.h
Brain/: AbstractBrain.cpp  AbstractBrain.h  CMakeLists.txt
Genome/: AbstractGenome.cpp  AbstractGenome.h  CMakeLists.txt
Genome/MultiGenome/: CMakeLists.txt  MultiGenome.cpp  MultiGenome.h
Genome/MultiGenome/Chromosome/: AbstractChromosome.cpp  AbstractChromosome.h  TemplatedChromosome.cpp  TemplatedChromosome.h
Group/: CMakeLists.txt  Group.cpp  Group.h
Optimizer/: AbstractOptimizer.cpp  AbstractOptimizer.h
Organism/: Organism.cpp  Organism.h
PythonTools/: MBuild.py  MBuilder.py  MGraph.py  MQ.py  MQ_conditions.txt  MQ_definitions.txt  findRelatedness.py  mkEdgesFromSnapShotDataFile.py  (+4 more)
code/: CMakeLists.txt  Global.cpp  main.cpp
code/Analyze/: CMakeLists.txt  brainTools.cpp  brainTools.h  entropy.cpp  entropy.h  fragmentation.cpp  fragmentation.h  neurocorrelates.cpp  neurocorrelates.h  smearedness.cpp  smearedness.h  stateToState.cpp  stateToState.h  timeSeries.cpp  timeSeries.h
code/Archivist/: CMakeLists.txt  DefaultArchivist.cpp  DefaultArchivist.h
code/Archivist/LODwAPArchivist/: CMakeLists.txt  LODwAPArchivist.cpp  LODwAPArchivist.h
code/Archivist/SSwDArchivist/: CMakeLists.txt  SSwDArchivist.cpp
code/Brain/: AbstractBrain.cpp  AbstractBrain.h  CMakeLists.txt
code/Brain/ANNBrain/: ANNBrain.cpp  ANNBrain.h  CMakeLists.txt
code/Brain/BiLogBrain/: BiLogBrain.cpp  BiLogBrain.h  CMakeLists.txt
code/Brain/CGPBrain/: CGPBrain.cpp  CGPBrain.h  CMakeLists.txt
code/Brain/ConstantValuesBrain/: CMakeLists.txt  ConstantValuesBrain.cpp
code/Brain/HumanBrain/: CMakeLists.txt
code/Brain/LSTMBrain/: CMakeLists.txt
code/Brain/MarkovBrain/: CMakeLists.txt  MarkovBrain.cpp  MarkovBrain.h
code/Brain/MarkovBrain/Gate/: AbstractGate.cpp  AbstractGate.h  AnnGate.cpp  AnnGate.h  CGPGate.cpp  CGPGate.h  ComparatorGate.cpp  ComparatorGate.h  DecomposableDirectGate.cpp  DecomposableDirectGate.h  DecomposableFeedbackGate.cpp  DecomposableFeedbackGate.h  DecomposableGate.cpp  DecomposableGate.h  DeterministicGate.cpp  DeterministicGate.h  EpsilonGate.cpp  EpsilonGate.h  FeedbackGate.cpp  FeedbackGate.h  GPGate.cpp  GPGate.h  IzhikevichGate.cpp  IzhikevichGate.h  NeuronGate.cpp  NeuronGate.h  PassthroughGate.cpp  PassthroughGate.h  ProbabilisticGate.cpp  ProbabilisticGate.h  README.md  TritDeterministicGate.cpp  TritDeterministicGate.h  VoidGate.cpp  VoidGate.h
code/Brain/MarkovBrain/GateBuilder/: GateBuilder.cpp  GateBuilder.h
code/Brain/MarkovBrain/GateListBuilder/: GateListBuilder.cpp  GateListBuilder.h
code/Brain/RNNBrain/: CMakeLists.txt  RNNBrain.cpp  RNNBrain.h
code/Brain/WireBrain/: CMakeLists.txt  WireBrain.cpp  WireBrain.h
code/Examples/Brains/: ExampleBrainClean_cpp  ExampleBrainClean_h  ExampleBrain_READ_ME.txt  ExampleBrain_cpp
code/Examples/World/: TemplateWorld_READ_ME.txt
code/Genome/: AbstractGenome.h  CMakeLists.txt
code/Genome/CircularGenome/: CMakeLists.txt  CircularGenome.cpp  CircularGenome.h
code/Genome/MultiGenome/: CMakeLists.txt  MultiGenome.cpp  MultiGenome.h
code/Genome/MultiGenome/Chromosome/: AbstractChromosome.h
code/Group/: CMakeLists.txt  Group.cpp  Group.h
code/Optimizer/: AbstractOptimizer.h  CMakeLists.txt
code/Optimizer/IslandsOptimizer/: CMakeLists.txt  IslandsOptimizer.cpp  IslandsOptimizer.h
code/Optimizer/LexicaseOptimizer/: CMakeLists.txt  LexicaseOptimizer.cpp
code/Optimizer/RouletteOptimizer/: CMakeLists.txt  RouletteOptimizer.cpp  RouletteOptimizer.h
code/Optimizer/SimpleOptimizer/: CMakeLists.txt  SimpleOptimizer.cpp  SimpleOptimizer.h
code/Optimizer/TournamentOptimizer/: CMakeLists.txt  TournamentOptimizer.cpp  TournamentOptimizer.h
code/Organism/: CMakeLists.txt
code/Testing/: test_graycode.h  tests.cpp
code/Utilities/: CMakeLists.txt  Data.cpp  Data.h  Filesystem.cpp  MTree.h  Parameters.cpp  Parameters.h  PowerSet.cpp  PowerSet.h  Random.h  Utilities.h
code/Utilities/Templates/: CMakeLists.txt  TemplateBrain.cpp  TemplateBrain.h  TemplateGenome.cpp  TemplateOptimizer.cpp  TemplateOptimizer.h  TemplateWorld.cpp  TemplateWorld.h
code/World/: AbstractWorld.cpp  AbstractWorld.h  CMakeLists.txt
code/World/BerryWorld/: BerryWorld.cpp  BerryWorld.h  CMakeLists.txt
code/World/BerryWorld/Processing_Visualizer/: Processing_Visualizer.pyde
code/World/BerryWorld/Utilities/: PointNd.h
code/World/BerryWorld/perfectSensors/: smallFront.txt
code/World/BlockCatchWorld/: BlockCatchWorld.cpp  BlockCatchWorld.h  CMakeLists.txt  README.txt
code/World/BlockCatchWorld/processing_blockCatch/: processing_blockCatch.pyde
code/World/Logic16World/: CMakeLists.txt
code/World/MyWorld/: CMakeLists.txt  MyWorld.cpp  MyWorld.h
code/World/NBackWorld/: CMakeLists.txt  NBackWorld.cpp  NBackWorld.h
code/World/PathFollowWorld/: CMakeLists.txt  PathFollowWorld.cpp  PathFollowWorld.h  README.md  path1.txt  path2.txt  path3.txt  path4.txt
code/World/PathFollowWorld/Processing_Visualizer/: Processing_Visualizer.pyde
code/World/TPMWorld/: CMakeLists.txt
code/World/TPM_GENERATORWorld/: CMakeLists.txt  TPM_GENERATORWorld.cpp  TPM_GENERATORWorld.h
code/World/TestWorld/: CMakeLists.txt
code/World/XorWorld/: CMakeLists.txt  XorWorld.h
src/Brain/MarkovBrain/: CMakeLists.txt
src/Brain/MarkovBrain/Gate/: GPGate.h
src/Brain/MarkovBrain/GateListBuilder/: GateListBuilder.cpp
(+353 files in other folders)
