option(enable_Genome_Multi "Enable Module MultiGenome" OFF)
if (enable_Genome_Multi)
  register_module(Genome Multi)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/MultiGenome.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Chromosome/AbstractChromosome.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Chromosome/TemplatedChromosome.cpp)
endif()
